added toggle features

--- a/home.html
+++ b/home.html
@@ -28,14 +28,14 @@
                     <!-- user Action -->
                     <div>
                         <!-- add money -->
-                        <button class="btn btn-lg">Add Money</button>
+                        <button id="btn-add-money-form" class="btn btn-lg">Add Money</button>
                         <!-- Cashout -->
-                        <button class="btn btn-lg">Cashout</button>
+                        <button id="btn-cash-out-form" class="btn btn-lg">Cashout</button>
                     </div>
                     <div class="divider"></div>
 
                     <!-- added money start -->
-                    <div class=" hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="add-money-form" class="  card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body ">
                             <div class="form-control">
                                 <label class="label">
@@ -60,7 +60,7 @@
                     <!-- added money end -->
 
                     <!-- cashout start -->
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
@@ -93,6 +93,7 @@
 
     <script src="js/home.js"></script>
     <script src="js/cashOut.js"></script>
+    <script src="js/features.js"></script>
 </body>
 
 </html>
